- 1.4.3:
    - Added: support for jax up to v0.4.25.
    - Removed: support for Python v3.6, v3.7 (no more available jaxlib)
- 1.4.2:
    - Hotfix: preventing installation from pulling incompatible jax versions >0.4.14
- 1.4.1:
    - Fix: native module not built for correct Python verison for MacOS.
    - Fix: Wheels for MacOS no longer build with OpenMP to avoid complicatons with conda environments.
- 1.4.0:
    - Changed: manylinux wheels for x86_64 architecture are now built with support for CUDA 11.1.
- 1.3.0:
    - Fix: OpenMP is no longer a strict requirement for installation.
    - Added: chacha.native.openmp_accelerated, returns True if CPU kernels are parallelised using OpenMP.
    - Added: Generic (not hardware-specific) CPU kernels as well as vectorized CPU kernels for ARM CPUs.
    - Added: support for jax up to v0.3.25
    - Added: support for Python v3.11
- 1.2.1:
    - Added: support for jax up to v0.3.23.
- 1.1.1:
    - Added: support for jax up to v0.3.13.
- 1.1.0:
    - Added: support for multiple layers of vmap wraps for functions in chacha.random.
    - Added: support for jax up to v0.3.1.
- 1.0.0:
    - Added: chacha.native.cuda_supported, returns True if cuda kernels were compiled.
    - Added: support for jax up to v0.2.27.
- 1.0.0-rc.3:
    - Added: wheels for Python 3.10.
- 1.0.0-rc.2:
    - Added: support for jax v0.2.21 - v0.2.22.
    - Removed: support for jax v0.2.10 - v0.2.11.
- 1.0.0-rc.1:
    - Added: support for jax v0.2.15 - v0.2.20.
    - Added: Native implementations for ChaCha block function as JAX ops.
- 0.1.0-alpha.2:
    - Fix: random.random_bits() no longer fails for empty shape.
    - Added: support for jax v0.2.14.
    - Added: random.fold_in().
- 0.1.0-alpha: Initial Release